--- a/CoffeeMachineApi/appsettings.json
+++ b/CoffeeMachineApi/appsettings.json
@@ -12,7 +12,7 @@
         }
     },
     "ConnectionStrings": {
-        "CoffeeMachineDB": "Server=tcp:coffeemachine-server.database.windows.net,1433;Initial Catalog=CoffeeMachineDB;Persist Security Info=False;User ID=coffeemachineadmin;Password=Pidrustalagala@1;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+        "CoffeeMachineDB": "Server=tcp:coffeemachine-server.database.windows.net,1433;Initial Catalog=CoffeeMachineDB;Persist Security Info=False;User ID=coffeemachineadmin;Password=your-password;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
     },
     "AllowedHosts": "*"
 }
